--- a/DAN_XLV_Kristina_Garcia_Francisco/DAN_XLV_Kristina_Garcia_Francisco.csproj
+++ b/DAN_XLV_Kristina_Garcia_Francisco/DAN_XLV_Kristina_Garcia_Francisco.csproj
@@ -65,6 +65,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helper\Validations.cs" />
+    <Compile Include="Model\Logger.cs" />
     <Compile Include="Model\Product.cs" />
     <Compile Include="Model\ProductDB.Context.cs">
       <AutoGen>True</AutoGen>
