--- a/DAN_XLV_Kristina_Garcia_Francisco/App.config
+++ b/DAN_XLV_Kristina_Garcia_Francisco/App.config
@@ -17,4 +17,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ProductDBEntities" connectionString="metadata=res://*/Model.ProductDB.csdl|res://*/Model.ProductDB.ssdl|res://*/Model.ProductDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=ProductDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ProductDBEntities" connectionString="metadata=res://*/Model.ProductDB.csdl|res://*/Model.ProductDB.ssdl|res://*/Model.ProductDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=ProductDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
