Added xaml comments and fixed delete bug

--- a/DAN_XLV_Kristina_Garcia_Francisco/DAN_XLV_Kristina_Garcia_Francisco.csproj
+++ b/DAN_XLV_Kristina_Garcia_Francisco/DAN_XLV_Kristina_Garcia_Francisco.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\DAN_XLV_Kristina_Garcia_Francisco.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -86,7 +87,6 @@
       <DependentUpon>ProductDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Service.cs" />
-    <Compile Include="tblProducts.cs" />
     <Compile Include="ViewModel\AddProductViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
